testdata/fixtures/review/positive/debug_debugger_js.js
function calc(a, b) {
  debugger;
  return a + b;
}
