testdata/fixtures/review/negative/todo_in_string_js.js
const label = "TODO: this is domain copy, not a comment";
export function show() {
  return label;
}
